# WarlocksWar

./: .gitignore  LICENSE  README.rst  requirements.txt  setup.cfg  test-requirements.txt
parabox/base_object/: __init__.py  base_object.kv  base_object.kv~  base_object.py  base_object.py~
parabox/behaviour/: __init__.py  __init__.py~
parabox/behaviour/bitmap/: __init__.py  __init__.py~  bitmap.py  bitmap.py~
parabox/behaviour/bitmap_collidable/: __init__.py  bitmap_collidable.py  bitmap_collidable.py~
parabox/behaviour/collidable/: __init__.py  __init__.py~  collidable.py  collidable.py~
parabox/behaviour/image_view/: image_view.py  image_view.py~
parabox/behaviour/movable/: __init__.py  __init__.py~  movable.py  movable.py~
parabox/phisics/: __init__.py  base_phisics.py  base_phisics.py~  plain_phisics.py  point_phisics.py  point_phisics.py~
parabox/structures/: __init__.py  __init__.py~  collector.py  objects_collection.py  objects_collection.py~
parabox/tests/test_base_object/: test_base_object.py
parabox/tests/test_phisics/: test_plain_phisics.py  test_point_phisics.py
parabox/tests/test_structures/: test_collector.py  test_objects_collection.py
parabox/tools/: image_to_bitmap.py
parabox/visual/: __init__.py
parabox/visual/image_view/: __init__.py  image_view.py
project/: game.kv  main.py
tools/: image_to_bitmap.py
warlocks_war/: game.kv  main.py  settings.py
warlocks_war/objects/: __init__.py  collector.py  objects_model.py  world_object.py
warlocks_war/phisics/: __init__.py  phisics_model.py
(+56 files in other folders)
