[metadata]
name = parabox
author = Denis Minich
author-email = denis.minich.fitr@gmail.com
summary = Widgets extensions for kivy framework
license = MIT
description-file =
    README.rst
requires-python = >=3.4
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    parabox
